# gedi-subsetter

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  algorithm_config.yaml  algorithm_config_cwl.yaml  build.sh  conda-lock.yml  environment-dev.yml  environment.yml  pyproject.toml  subset.cwl  subset.sh
.github/: dependabot.yml
.github/workflows/: build-app-pack.yml  test.yml
cwl_workflows/: process_gedi-subsetter_mlucas_ogc.cwl
docs/: MAAP_USAGE.md
environment/: conda-lock.yml  environment-dev.yml  environment-maappy.yml  environment.yml
gedi-subset/: CHANGELOG.md  GEDI_Subset_Gabon.ipynb  README.md  UseCaseTest.md  Xarray-GEDI-L4A.ipynb  algorithm_config.yaml  build.sh  combine-gpkg.ipynb  environment.yml  fp.py  gedi_utils.py  hdf5.ipynb  maapx.py  osx.py  pyproject.toml  requirements-dev.txt  requirements-maappy.txt  requirements.txt  setup.ipynb  spatial-search.ipynb  subset.ipynb  subset.py  subset.sh
gedi-subset/environment/: environment-dev.yml  environment.yml
gedi-subset/notebooks/: GEDI_L4A_Subsetting.ipynb  GEDI_Subset_EquatorialGuinea.ipynb  GEDI_Subset_Gabon.ipynb  combine.ipynb  hdf5.ipynb  setup.ipynb
gedi-subset/src/: fp.py  gedi_utils.py  maapx.py  subset.py
gedi-subset/src/gedi_subset/: gedi_utils.py  maapx.py  osx.py  subset.py
gedi-subset/tests/: conftest.py  test_gedi_utils.py  test_maapx.py
gedi-subset/typings/maap/: AWS.pyi  maap.pyi
maap-science-usecase-estimates/: boreal_grid_albers90k_gpkg.gpkg  maap_science_usecase_estimates.ipynb
notebooks/: CMR_Query.ipynb  CMR_Query_GEDI_L2B.ipynb  CMR_Query_GEDI_L4A.ipynb  GEDI_L4A_Subsetting.ipynb  GEDI_Subset_EquatorialGuinea.ipynb  GEDI_Subset_Gabon.ipynb  UseCaseTest.md  setup.ipynb  spatial-search.ipynb  subset.ipynb
ogc/: algorithm_config.yml  inputs.yml
src/gedi_subset/: MAAP_USAGE.md  aws.py  cmr.py  doi_cfg.json  fp.py  gedi_utils.py  h5frame.py  maapx.py  subset.py
tests/: conftest.py  test_gedi_utils.py  test_maapx.py  test_subset.py
tests/cassettes/test_maapx/: test_find_collection_cloud_hosted.yaml  test_find_collection_multiple_results.yaml  test_find_collection_no_results.yaml
tests/fixtures/: MONTS_BIROUGOU_NATIONAL_PARK.geojson
typings/maap/: AWS.pyi  Result.pyi
workflows/: process_gedi-subsetter_mlucas_ogc.cwl
