[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gedi_subset"
description = "GEDI Subsetter"
dynamic = ["version"]
authors = [
  { name = "Chuck Daniels", email = "chuck@developmentseed.org" },
  { name = "Jamison French", email = "jamison@developmentseed.org" },
  { name = "Alex Mandel", email = "alex@developmentseed.org" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">= 3.12"
scripts = { gedi-subset = "gedi_subset.subset:main" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/gedi_subset"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.pixi.workspace]
channels = ["conda-forge", "nodefaults"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.system-requirements]
macos = "11.0"

[tool.pixi.dependencies]
boto3 = "*"
bottleneck = "*"
fsspec = "*"
geopandas = "*"
h5py = "*"
numba = "*"
numexpr = "*"
pandas = "*"
pyarrow = "*"
pydantic = "*"
s3fs = ">=2025.9.0"
shapely = "*"
typer = "*"

[tool.pixi.pypi-dependencies]
maap-py = "*"

[tool.pixi.feature.dev.dependencies]
backoff = "*"
boto3-stubs-essential = "*"
botocore-stubs = "*"
contextily = "*"
ipykernel = "*"
pandas-stubs = "*"
pre-commit = "*"
pyarrow-stubs = "*"
mypy = "*"
ruff = "*"
shellcheck = "*"
types-requests = "*"

[tool.pixi.feature.dev.pypi-dependencies]
cwltool = "*"
# Built editable in development mode
gedi_subset = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
moto = "*"
pytest = "*"
pytest-recording = "*"
vcrpy = "*"

[tool.pixi.feature.build.pypi-dependencies]
build = "*"
hatchling = "*"
hatch-vcs = "*"

[tool.pixi.feature.build.tasks]
clean = "rm -rf ./dist"
build-wheel = { cmd = [
  "python",
  "-m",
  "build",
  "--no-isolation",
  "--wheel",
  "--outdir",
  "./dist",
  ".",
], depends-on = [
  "clean",
] }

# Used for installing into production, as a post-process step.
[tool.pixi.feature.prod.dependencies]
pip = "*"

[tool.pixi.feature.prod.tasks]
# Install into the production environment
postinstall-production = { cmd = [
  "pip",
  "install",
  "--root-user-action",
  "ignore",
  "--no-deps",
  "--disable-pip-version-check",
  "dist/gedi_subset-*.whl",
] }

[tool.pixi.tasks]
cwltool = { cmd = [
  "cwltool",
  "--disable-color",
  "--no-read-only",
  "--no-match-user",
  "--tmpdir-prefix",
  "$PWD",
  "--log-dir",
  "$PWD",
], depends-on = [
  "docker-build",
] }
docker-build = "docker build -t gedi-subset ."
lint = "pre-commit run -a"
mypy = "mypy"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
# Default environment, has features for running in development, testing and building
default = { features = ["test", "dev", "build"], solve-group = "default" }
# Leaner environment for use in production
prod = { features = ["prod"], solve-group = "default" }

[tool.ruff]
target-version = "py312"
extend-include = ["*.pyi"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
mypy_path = ["typings"]
files = ["src", "tests"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fsspec", "geopandas", "h5py", "moto", "s3fs", "shapely.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "-v"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
